# practica1_cpp

./: CMakeLists.txt  ejer11.cpp  ejer13.cpp  ejer15.cpp  ejer17.cpp  ejer19.cpp  ejer21.cpp  ejer23.cpp  ejer25.cpp  ejer27.cpp  ejer29.cpp  ejer3.cpp  ejer5.cpp  ejer7.cpp  ejer9.cpp  main.cpp  problem11.cpp  problem13.cpp  problem15.cpp  problem17.cpp  problem3.cpp  problem5.cpp  problem7.cpp  problem9.cpp
